# FALSEInterpreter

./: .gitignore  .travis.yml  CMakeLists.txt  MemoryInterface.cpp  MemoryInterface.hpp  README.md  SimpleMemory.cpp  SimpleMemory.hpp  SimpleStack.cpp  SimpleStack.hpp  StackInterface.hpp  StringConverter.hpp  VirtualMachine.cpp  VirtualMachine.hpp  VirtualMachineTest.cpp  false  interactiveshell.cpp  makefile
.github/workflows/: ci.yml
BaseTypes/: BaseTypeTest.cpp  Bool.hpp  CMakeLists.txt  Char.hpp  Integer.hpp  Object.cpp  Object.hpp  TypeHolder.hpp
Commands/: AddCommand.hpp  ArithmeticCommands.hpp  BinaryOperatorCommand.hpp  CMakeLists.txt  Command.cpp  Command.hpp  DeleteCommand.cpp  DeleteCommand.hpp  DuplicateCommand.cpp  DuplicateCommand.hpp  EqualCommand.cpp  EqualCommand.hpp  GetVariableCommand.cpp  GetVariableCommand.hpp  IFCOmmand.cpp  IFCOmmand.hpp  IFCommand.hpp  LogicalNotCommand.cpp  LogicalNotCommand.hpp  NegationCommand.cpp  NegationCommand.hpp  PrintAsCharCommand.cpp  PrintAsCharCommand.hpp  PrintAsIntegerCommand.cpp  PrintAsIntegerCommand.hpp  PushCommand.cpp  PushCommand.hpp  ReadIntegerCommand.cpp  ReadIntegerCommand.hpp  RunSubroutineCommand.cpp  RunSubroutineCommand.hpp  SetVariableCommand.cpp  SetVariableCommand.hpp  StringCommand.cpp  StringCommand.hpp  SubroutineCommand.cpp  SubroutineCommand.hpp  SwapItemCommand.cpp  SwapItemCommand.hpp  ThirdToTopCommand.cpp  (+3 more)
example/: asciiPrint.false  count.false  helloworld.false  printPrimes.false
tests/: ArithmeticOperationTest.cpp  BaseTypeTest.cpp  CMakeLists.txt  ControlFlowTest.cpp  LogicalOperationTest.cpp  StackModifierOperationTest.cpp  TestSummary.hpp  VariablesSubroutines.cpp  VirtualMachineTest.cpp
